# lab

./: .gitignore  CMakeLists.txt  README.md  build.sh  delete.sh  find.sh  format.sh  run.sh  sdl2CFlags.sh  sdl2Libs.sh  setup.sh
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  lab
src/: main.c  new.c  rest.c
