cmake_minimum_required(VERSION 3.22)
project(Laboratory)
find_package(Vulkan REQUIRED)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(${Vulkan_INCLUDE_DIRS})
file(GLOB_RECURSE sources CONFIGURE_DEPENDS "src/**.c")
file(GLOB_RECURSE headers CONFIGURE_DEPENDS "src/**.h")
message(STATUS "sources: " ${sources})
message(STATUS "headers: " ${headers})
add_executable(lab ${sources} ${headers})
target_link_libraries(lab ${Vulkan_LIBRARIES})
target_link_libraries(lab ${SDL2_LIBRARIES})
